<resources>
    <string name="app_name">QuizApp</string>
    <string name="BtnAnswer">Show Answers</string>
    <string name="QuizTitle"> How well do you know geography ? </string>
    <string name="question_1">1. Where is the deepest point in Earth\'s oceans at 10,924m/35,840ft?</string>
    <string name="question_1_answer_1">Peruvian Trench</string>
    <string name="question_1_answer_2">Java Trench</string>
    <string name="question_1_answer_3">Mariana Trench</string>
    <string name="question_1_answer">Mariana Trench</string>
    <string name="question_2">2. The Great Barrier Reef is off the coast of which country?</string>
    <string name="question_2_answer_1">Brazil</string>
    <string name="question_2_answer_2">Australia</string>
    <string name="question_2_answer_3">India</string>
    <string name="question_2_answer">Australia</string>
    <string name="question_3">3. Which countries are part of the European continent?</string>
    <string name="question_3_answer_1">Brazil</string>
    <string name="question_3_answer_2">France</string>
    <string name="question_3_answer_3">Spain</string>
    <string name="question_3_answer_4">Japan</string>
    <string name="question_4">4. Could you name the smalles continent on earth?</string>
    <string name="question_4_answer">Australia</string>
    <string name="write">Please, write your answer:</string>
    <string name="question_5">5. Copenhagen is the capital of which country></string>
    <string name="question_5_answer_1">Denmark</string>
    <string name="question_5_answer_2">Finland</string>
    <string name="question_5_answer_3">Island</string>
    <string name="question_5_answer">Denmark</string>
    <string name="question_6">6. Which are the countries on the Mediterranean coast?</string>
    <string name="question_6_answer_1">Spain</string>
    <string name="question_6_answer_2">Italy</string>
    <string name="question_6_answer_3">Germany</string>
    <string name="question_6_answer_4">Luxembourg</string>
    <string name="question_7">7. In which country is the Vesuvius Mountain?</string>
    <string name="question_7_answer">Italy</string>
</resources>