<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top">
            <!--

                        <ImageView
                            android:contentDescription="@string/Quiz_question"
                            android:id="@+id/solar_image_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:src="@drawable/solarsystem"/>
            -->

            <TextView
                android:id="@+id/Title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/QuizTitle"
                android:textAllCaps="true"
                android:textSize="@dimen/TitleSize" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/TxtViewMarginLeft"
                android:layout_marginTop="@dimen/TxtViewMarginTop"
                android:text="@string/question_1"
                android:textSize="@dimen/question_size" />

            <RadioGroup
                android:id="@+id/first_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/RadioBtnMarginStart">

                <RadioButton
                    android:id="@+id/question1_wrong_answer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_answer_1" />

                <RadioButton
                    android:id="@+id/question1_wrong_answer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_answer_2" />

                <RadioButton
                    android:id="@+id/mercury_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_answer_3" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/TxtViewMarginLeft"
                android:layout_marginTop="@dimen/TxtViewMarginTop"
                android:text="@string/question_1"
                android:textSize="@dimen/question_size" />

            <RadioGroup
                android:id="@+id/first_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/RadioBtnMarginStart">

                <RadioButton
                    android:id="@+id/question1_wrong_answer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_answer_1" />

                <RadioButton
                    android:id="@+id/question1_wrong_answer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_answer_2" />

                <RadioButton
                    android:id="@+id/mercury_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_answer_3" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/TxtViewMarginLeft"
                android:layout_marginTop="@dimen/TxtViewMarginTop"
                android:text="@string/question_1"
                android:textSize="@dimen/question_size" />

            <CheckBox
                android:id="@+id/rings_surrounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/CheckBtnMarginLeft"
                android:layout_marginStart="@dimen/CheckBtnMarginStart"
                android:text="@string/question_1_answer_1" />

            <CheckBox
                android:id="@+id/tilted_orbit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/CheckBtnMarginLeft"
                android:layout_marginStart="@dimen/CheckBtnMarginStart"
                android:text="@string/question_1_answer_1" />

            <CheckBox
                android:id="@+id/one_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/CheckBtnMarginLeft"
                android:layout_marginStart="@dimen/CheckBtnMarginStart"
                android:text="@string/question_1_answer_1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/TxtViewMarginLeft"
                android:layout_marginTop="@dimen/TxtViewMarginTop"
                android:text="@string/question_1"
                android:textSize="@dimen/question_size" />

            <EditText
                android:id="@+id/pluto_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/EditTxtMarginLeft"
                android:layout_marginStart="@dimen/EditTxtMarginStart"
                android:hint="@string/write"
                android:inputType="textCapWords"
                android:textSize="@dimen/TeamTxtSize" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/BtnSpace"
            android:layout_marginTop="@dimen/BtnSpace"
            android:background="@color/BtnRstBg"
            android:onClick="DisplayResults"
            android:padding="@dimen/BtnTeamPad"
            android:text="@string/BtnAnswer"
            android:textColor="@color/BtnRstCol"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>